--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "concurrently": "^3.5.1",
     "config": "^1.30.0",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.1.3",
     "passport": "^0.4.0",
